Entrega/parser.out
Created by PLY version 3.9 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> PROGRAM ID addProcedureDir SEMICOLON cicloVars cicloFuncion MAIN bloque
Rule 2     addProcedureDir -> <empty>
Rule 3     cicloVars -> vars cicloVars
Rule 4     cicloVars -> <empty>
Rule 5     vars -> createVariableDir VAR auxVar1
Rule 6     createVariableDir -> <empty>
Rule 7     auxVar1 -> idVars COLON tipo addTypeGlobal SEMICOLON
Rule 8     addTypeGlobal -> <empty>
Rule 9     idVars -> ID addVariableDir ambIdVars
Rule 10    addVariableDir -> <empty>
Rule 11    ambIdVars -> COMMA idVars
Rule 12    ambIdVars -> <empty>
Rule 13    tipo -> INT ambAuxTipo1
Rule 14    tipo -> BOOL ambAuxTipo1
Rule 15    tipo -> STRING ambAuxTipo1
Rule 16    tipo -> FLOAT ambAuxTipo1
Rule 17    tipo -> CHAR ambAuxTipo1
Rule 18    ambAuxTipo1 -> LBRACKET CTEINT RBRACKET
Rule 19    ambAuxTipo1 -> <empty>
Rule 20    cicloVarsMain -> varsMain cicloVarsMain
Rule 21    cicloVarsMain -> <empty>
Rule 22    varsMain -> createVariableDirMain VAR auxVar1Main
Rule 23    createVariableDirMain -> <empty>
Rule 24    auxVar1Main -> idVarsMain COLON tipo addTypeGlobalMain SEMICOLON
Rule 25    addTypeGlobalMain -> <empty>
Rule 26    idVarsMain -> ID addVariableDirMain ambIdVarsMain
Rule 27    addVariableDirMain -> <empty>
Rule 28    ambIdVarsMain -> COMMA idVarsMain
Rule 29    ambIdVarsMain -> <empty>
Rule 30    bloque -> LBRACE cicloVarsMain cicloBloque RBRACE
Rule 31    cicloBloque -> estatuto cicloBloque
Rule 32    cicloBloque -> <empty>
Rule 33    bloqueFuncion -> LBRACE cicloVarsFuncion cicloBloqueFuncion RETURN ID SEMICOLON RBRACE
Rule 34    cicloBloqueFuncion -> estatuto cicloBloqueFuncion
Rule 35    cicloBloqueFuncion -> <empty>
Rule 36    cicloVarsFuncion -> varsFuncion cicloVarsFuncion
Rule 37    cicloVarsFuncion -> <empty>
Rule 38    varsFuncion -> createVariableDirFuncion VAR auxVar1Funcion
Rule 39    createVariableDirFuncion -> <empty>
Rule 40    auxVar1Funcion -> idVarsFuncion COLON tipo addTypeGlobalFuncion SEMICOLON
Rule 41    addTypeGlobalFuncion -> <empty>
Rule 42    idVarsFuncion -> ID addVariableDirFuncion ambIdVarsFuncion
Rule 43    addVariableDirFuncion -> <empty>
Rule 44    ambIdVarsFuncion -> COMMA idVarsFuncion
Rule 45    ambIdVarsFuncion -> <empty>
Rule 46    estatuto -> asignacion
Rule 47    estatuto -> condicion
Rule 48    estatuto -> escritura
Rule 49    estatuto -> lectura
Rule 50    estatuto -> llamada
Rule 51    estatuto -> ciclo
Rule 52    asignacion -> ID auxAsignacion1 EQUALA exp SEMICOLON
Rule 53    auxAsignacion1 -> LBRACKET exp RBRACKET
Rule 54    auxAsignacion1 -> <empty>
Rule 55    escritura -> PRINT LPAREN auxEscritura1 RPAREN SEMICOLON
Rule 56    auxEscritura1 -> auxEscritura2 ambAuxEscritura1
Rule 57    ambAuxEscritura1 -> COMMA auxEscritura1
Rule 58    ambAuxEscritura1 -> <empty>
Rule 59    auxEscritura2 -> exp
Rule 60    auxEscritura2 -> CTESTRING
Rule 61    cicloExpresion -> expresion
Rule 62    cicloExpresion -> <empty>
Rule 63    auxCicloExpresion -> AND
Rule 64    auxCicloExpresion -> OR
Rule 65    auxCicloExpresion -> <empty>
Rule 66    expresion -> exp auxExpresion exp
Rule 67    expresion -> <empty>
Rule 68    auxExpresion -> GTHAN
Rule 69    auxExpresion -> LTHAN
Rule 70    auxExpresion -> NOTEQUAL
Rule 71    auxExpresion -> GETHAN
Rule 72    auxExpresion -> LETHAN
Rule 73    auxExpresion -> EQUAL
Rule 74    condicion -> IF LPAREN cicloExpresion RPAREN bloque auxCondicion
Rule 75    auxCondicion -> ELSE bloque
Rule 76    auxCondicion -> <empty>
Rule 77    exp -> cicloExp
Rule 78    cicloExp -> termino ambExp
Rule 79    ambExp -> auxExp cicloExp
Rule 80    ambExp -> <empty>
Rule 81    auxExp -> PLUS paso3_suma
Rule 82    auxExp -> MINUS paso3_resta
Rule 83    termino -> cicloTermino
Rule 84    cicloTermino -> factor ambCicloTermino
Rule 85    ambCicloTermino -> auxTermino cicloTermino
Rule 86    ambCicloTermino -> <empty>
Rule 87    auxTermino -> MULTI paso2_mult
Rule 88    auxTermino -> DIVIDE paso2_mult
Rule 89    factor -> LPAREN exp RPAREN
Rule 90    factor -> auxFactor varcte paso1
Rule 91    auxFactor -> auxExp
Rule 92    auxFactor -> <empty>
Rule 93    varcte -> ID auxVarcte
Rule 94    varcte -> CTEINT
Rule 95    varcte -> CTEFLOAT
Rule 96    varcte -> CTECHAR
Rule 97    varcte -> CTEBOOL
Rule 98    varcte -> CTESTRING
Rule 99    auxVarcte -> LPAREN exp RPAREN
Rule 100   auxVarcte -> LBRACKET exp LBRACKET
Rule 101   auxVarcte -> <empty>
Rule 102   cicloFuncion -> funcion cicloFuncion
Rule 103   cicloFuncion -> <empty>
Rule 104   funcion -> FUNCTION tipo ID LPAREN auxFunction RPAREN bloqueFuncion addProcDirectoryFunc
Rule 105   addProcDirectoryFunc -> <empty>
Rule 106   auxFunction -> parametros
Rule 107   auxFunction -> <empty>
Rule 108   parametros -> auxParametros
Rule 109   auxParametros -> tipo ID addParameters ambAuxParametros
Rule 110   addParameters -> <empty>
Rule 111   ambAuxParametros -> COMMA auxParametros
Rule 112   ambAuxParametros -> <empty>
Rule 113   ciclo -> WHILE LPAREN cicloExpresion RPAREN bloque
Rule 114   llamada -> ID LPAREN auxLlamada RPAREN SEMICOLON
Rule 115   auxLlamada -> argumentos
Rule 116   auxLlamada -> <empty>
Rule 117   argumentos -> auxArgumentos1
Rule 118   argumentos -> <empty>
Rule 119   auxArgumentos1 -> exp ambAuxArgumentos1
Rule 120   ambAuxArgumentos1 -> COMMA auxArgumentos1
Rule 121   ambAuxArgumentos1 -> <empty>
Rule 122   lectura -> READ LPAREN ID RPAREN SEMICOLON
Rule 123   paso1 -> <empty>
Rule 124   paso2_mult -> <empty>
Rule 125   paso2_div -> <empty>
Rule 126   paso3_suma -> <empty>
Rule 127   paso3_resta -> <empty>

Terminals, with rules where they appear

AND                  : 63
BOOL                 : 14
CHAR                 : 17
COLON                : 7 24 40
COMMA                : 11 28 44 57 111 120
CTEBOOL              : 97
CTECHAR              : 96
CTEFLOAT             : 95
CTEINT               : 18 94
CTESTRING            : 60 98
DIVIDE               : 88
ELSE                 : 75
EQUAL                : 73
EQUALA               : 52
FLOAT                : 16
FUNCTION             : 104
GETHAN               : 71
GTHAN                : 68
ID                   : 1 9 26 33 42 52 93 104 109 114 122
IF                   : 74
INT                  : 13
LBRACE               : 30 33
LBRACKET             : 18 53 100 100
LETHAN               : 72
LPAREN               : 55 74 89 99 104 113 114 122
LTHAN                : 69
MAIN                 : 1
MINUS                : 82
MULTI                : 87
NOTEQUAL             : 70
OR                   : 64
PLUS                 : 81
PRINT                : 55
PROGRAM              : 1
RBRACE               : 30 33
RBRACKET             : 18 53
READ                 : 122
RETURN               : 33
RPAREN               : 55 74 89 99 104 113 114 122
SEMICOLON            : 1 7 24 33 40 52 55 114 122
STRING               : 15
VAR                  : 5 22 38
WHILE                : 113
error                : 

Nonterminals, with rules where they appear

addParameters        : 109
addProcDirectoryFunc : 104
addProcedureDir      : 1
addTypeGlobal        : 7
addTypeGlobalFuncion : 40
addTypeGlobalMain    : 24
addVariableDir       : 9
addVariableDirFuncion : 42
addVariableDirMain   : 26
ambAuxArgumentos1    : 119
ambAuxEscritura1     : 56
ambAuxParametros     : 109
ambAuxTipo1          : 13 14 15 16 17
ambCicloTermino      : 84
ambExp               : 78
ambIdVars            : 9
ambIdVarsFuncion     : 42
ambIdVarsMain        : 26
argumentos           : 115
asignacion           : 46
auxArgumentos1       : 117 120
auxAsignacion1       : 52
auxCicloExpresion    : 
auxCondicion         : 74
auxEscritura1        : 55 57
auxEscritura2        : 56
auxExp               : 79 91
auxExpresion         : 66
auxFactor            : 90
auxFunction          : 104
auxLlamada           : 114
auxParametros        : 108 111
auxTermino           : 85
auxVar1              : 5
auxVar1Funcion       : 38
auxVar1Main          : 22
auxVarcte            : 93
bloque               : 1 74 75 113
bloqueFuncion        : 104
ciclo                : 51
cicloBloque          : 30 31
cicloBloqueFuncion   : 33 34
cicloExp             : 77 79
cicloExpresion       : 74 113
cicloFuncion         : 1 102
cicloTermino         : 83 85
cicloVars            : 1 3
cicloVarsFuncion     : 33 36
cicloVarsMain        : 20 30
condicion            : 47
createVariableDir    : 5
createVariableDirFuncion : 38
createVariableDirMain : 22
escritura            : 48
estatuto             : 31 34
exp                  : 52 53 59 66 66 89 99 100 119
expresion            : 61
factor               : 84
funcion              : 102
idVars               : 7 11
idVarsFuncion        : 40 44
idVarsMain           : 24 28
lectura              : 49
llamada              : 50
parametros           : 106
paso1                : 90
paso2_div            : 
paso2_mult           : 87 88
paso3_resta          : 82
paso3_suma           : 81
programa             : 0
termino              : 78
tipo                 : 7 24 40 104 109
varcte               : 90
vars                 : 3
varsFuncion          : 36
varsMain             : 20

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . PROGRAM ID addProcedureDir SEMICOLON cicloVars cicloFuncion MAIN bloque

    PROGRAM         shift and go to state 1

    programa                       shift and go to state 2

state 1

    (1) programa -> PROGRAM . ID addProcedureDir SEMICOLON cicloVars cicloFuncion MAIN bloque

    ID              shift and go to state 3


state 2

    (0) S' -> programa .



state 3

    (1) programa -> PROGRAM ID . addProcedureDir SEMICOLON cicloVars cicloFuncion MAIN bloque
    (2) addProcedureDir -> .

    SEMICOLON       reduce using rule 2 (addProcedureDir -> .)

    addProcedureDir                shift and go to state 4

state 4

    (1) programa -> PROGRAM ID addProcedureDir . SEMICOLON cicloVars cicloFuncion MAIN bloque

    SEMICOLON       shift and go to state 5


state 5

    (1) programa -> PROGRAM ID addProcedureDir SEMICOLON . cicloVars cicloFuncion MAIN bloque
    (3) cicloVars -> . vars cicloVars
    (4) cicloVars -> .
    (5) vars -> . createVariableDir VAR auxVar1
    (6) createVariableDir -> .

    FUNCTION        reduce using rule 4 (cicloVars -> .)
    MAIN            reduce using rule 4 (cicloVars -> .)
    VAR             reduce using rule 6 (createVariableDir -> .)

    vars                           shift and go to state 6
    cicloVars                      shift and go to state 7
    createVariableDir              shift and go to state 8

state 6

    (3) cicloVars -> vars . cicloVars
    (3) cicloVars -> . vars cicloVars
    (4) cicloVars -> .
    (5) vars -> . createVariableDir VAR auxVar1
    (6) createVariableDir -> .

    FUNCTION        reduce using rule 4 (cicloVars -> .)
    MAIN            reduce using rule 4 (cicloVars -> .)
    VAR             reduce using rule 6 (createVariableDir -> .)

    createVariableDir              shift and go to state 8
    cicloVars                      shift and go to state 9
    vars                           shift and go to state 6

state 7

    (1) programa -> PROGRAM ID addProcedureDir SEMICOLON cicloVars . cicloFuncion MAIN bloque
    (102) cicloFuncion -> . funcion cicloFuncion
    (103) cicloFuncion -> .
    (104) funcion -> . FUNCTION tipo ID LPAREN auxFunction RPAREN bloqueFuncion addProcDirectoryFunc

    MAIN            reduce using rule 103 (cicloFuncion -> .)
    FUNCTION        shift and go to state 10

    cicloFuncion                   shift and go to state 11
    funcion                        shift and go to state 12

state 8

    (5) vars -> createVariableDir . VAR auxVar1

    VAR             shift and go to state 13


state 9

    (3) cicloVars -> vars cicloVars .

    FUNCTION        reduce using rule 3 (cicloVars -> vars cicloVars .)
    MAIN            reduce using rule 3 (cicloVars -> vars cicloVars .)


state 10

    (104) funcion -> FUNCTION . tipo ID LPAREN auxFunction RPAREN bloqueFuncion addProcDirectoryFunc
    (13) tipo -> . INT ambAuxTipo1
    (14) tipo -> . BOOL ambAuxTipo1
    (15) tipo -> . STRING ambAuxTipo1
    (16) tipo -> . FLOAT ambAuxTipo1
    (17) tipo -> . CHAR ambAuxTipo1

    INT             shift and go to state 16
    BOOL            shift and go to state 19
    STRING          shift and go to state 14
    FLOAT           shift and go to state 17
    CHAR            shift and go to state 18

    tipo                           shift and go to state 15

state 11

    (1) programa -> PROGRAM ID addProcedureDir SEMICOLON cicloVars cicloFuncion . MAIN bloque

    MAIN            shift and go to state 20


state 12

    (102) cicloFuncion -> funcion . cicloFuncion
    (102) cicloFuncion -> . funcion cicloFuncion
    (103) cicloFuncion -> .
    (104) funcion -> . FUNCTION tipo ID LPAREN auxFunction RPAREN bloqueFuncion addProcDirectoryFunc

    MAIN            reduce using rule 103 (cicloFuncion -> .)
    FUNCTION        shift and go to state 10

    cicloFuncion                   shift and go to state 21
    funcion                        shift and go to state 12

state 13

    (5) vars -> createVariableDir VAR . auxVar1
    (7) auxVar1 -> . idVars COLON tipo addTypeGlobal SEMICOLON
    (9) idVars -> . ID addVariableDir ambIdVars

    ID              shift and go to state 24

    idVars                         shift and go to state 22
    auxVar1                        shift and go to state 23

state 14

    (15) tipo -> STRING . ambAuxTipo1
    (18) ambAuxTipo1 -> . LBRACKET CTEINT RBRACKET
    (19) ambAuxTipo1 -> .

    LBRACKET        shift and go to state 25
    ID              reduce using rule 19 (ambAuxTipo1 -> .)
    SEMICOLON       reduce using rule 19 (ambAuxTipo1 -> .)

    ambAuxTipo1                    shift and go to state 26

state 15

    (104) funcion -> FUNCTION tipo . ID LPAREN auxFunction RPAREN bloqueFuncion addProcDirectoryFunc

    ID              shift and go to state 27


state 16

    (13) tipo -> INT . ambAuxTipo1
    (18) ambAuxTipo1 -> . LBRACKET CTEINT RBRACKET
    (19) ambAuxTipo1 -> .

    LBRACKET        shift and go to state 25
    ID              reduce using rule 19 (ambAuxTipo1 -> .)
    SEMICOLON       reduce using rule 19 (ambAuxTipo1 -> .)

    ambAuxTipo1                    shift and go to state 28

state 17

    (16) tipo -> FLOAT . ambAuxTipo1
    (18) ambAuxTipo1 -> . LBRACKET CTEINT RBRACKET
    (19) ambAuxTipo1 -> .

    LBRACKET        shift and go to state 25
    ID              reduce using rule 19 (ambAuxTipo1 -> .)
    SEMICOLON       reduce using rule 19 (ambAuxTipo1 -> .)

    ambAuxTipo1                    shift and go to state 29

state 18

    (17) tipo -> CHAR . ambAuxTipo1
    (18) ambAuxTipo1 -> . LBRACKET CTEINT RBRACKET
    (19) ambAuxTipo1 -> .

    LBRACKET        shift and go to state 25
    ID              reduce using rule 19 (ambAuxTipo1 -> .)
    SEMICOLON       reduce using rule 19 (ambAuxTipo1 -> .)

    ambAuxTipo1                    shift and go to state 30

state 19

    (14) tipo -> BOOL . ambAuxTipo1
    (18) ambAuxTipo1 -> . LBRACKET CTEINT RBRACKET
    (19) ambAuxTipo1 -> .

    LBRACKET        shift and go to state 25
    ID              reduce using rule 19 (ambAuxTipo1 -> .)
    SEMICOLON       reduce using rule 19 (ambAuxTipo1 -> .)

    ambAuxTipo1                    shift and go to state 31

state 20

    (1) programa -> PROGRAM ID addProcedureDir SEMICOLON cicloVars cicloFuncion MAIN . bloque
    (30) bloque -> . LBRACE cicloVarsMain cicloBloque RBRACE

    LBRACE          shift and go to state 32

    bloque                         shift and go to state 33

state 21

    (102) cicloFuncion -> funcion cicloFuncion .

    MAIN            reduce using rule 102 (cicloFuncion -> funcion cicloFuncion .)


state 22

    (7) auxVar1 -> idVars . COLON tipo addTypeGlobal SEMICOLON

    COLON           shift and go to state 34


state 23

    (5) vars -> createVariableDir VAR auxVar1 .

    VAR             reduce using rule 5 (vars -> createVariableDir VAR auxVar1 .)
    FUNCTION        reduce using rule 5 (vars -> createVariableDir VAR auxVar1 .)
    MAIN            reduce using rule 5 (vars -> createVariableDir VAR auxVar1 .)


state 24

    (9) idVars -> ID . addVariableDir ambIdVars
    (10) addVariableDir -> .

    COMMA           reduce using rule 10 (addVariableDir -> .)
    COLON           reduce using rule 10 (addVariableDir -> .)

    addVariableDir                 shift and go to state 35

state 25

    (18) ambAuxTipo1 -> LBRACKET . CTEINT RBRACKET

    CTEINT          shift and go to state 36


state 26

    (15) tipo -> STRING ambAuxTipo1 .

    SEMICOLON       reduce using rule 15 (tipo -> STRING ambAuxTipo1 .)
    ID              reduce using rule 15 (tipo -> STRING ambAuxTipo1 .)


state 27

    (104) funcion -> FUNCTION tipo ID . LPAREN auxFunction RPAREN bloqueFuncion addProcDirectoryFunc

    LPAREN          shift and go to state 37


state 28

    (13) tipo -> INT ambAuxTipo1 .

    SEMICOLON       reduce using rule 13 (tipo -> INT ambAuxTipo1 .)
    ID              reduce using rule 13 (tipo -> INT ambAuxTipo1 .)


state 29

    (16) tipo -> FLOAT ambAuxTipo1 .

    SEMICOLON       reduce using rule 16 (tipo -> FLOAT ambAuxTipo1 .)
    ID              reduce using rule 16 (tipo -> FLOAT ambAuxTipo1 .)


state 30

    (17) tipo -> CHAR ambAuxTipo1 .

    SEMICOLON       reduce using rule 17 (tipo -> CHAR ambAuxTipo1 .)
    ID              reduce using rule 17 (tipo -> CHAR ambAuxTipo1 .)


state 31

    (14) tipo -> BOOL ambAuxTipo1 .

    SEMICOLON       reduce using rule 14 (tipo -> BOOL ambAuxTipo1 .)
    ID              reduce using rule 14 (tipo -> BOOL ambAuxTipo1 .)


state 32

    (30) bloque -> LBRACE . cicloVarsMain cicloBloque RBRACE
    (20) cicloVarsMain -> . varsMain cicloVarsMain
    (21) cicloVarsMain -> .
    (22) varsMain -> . createVariableDirMain VAR auxVar1Main
    (23) createVariableDirMain -> .

    ID              reduce using rule 21 (cicloVarsMain -> .)
    IF              reduce using rule 21 (cicloVarsMain -> .)
    PRINT           reduce using rule 21 (cicloVarsMain -> .)
    READ            reduce using rule 21 (cicloVarsMain -> .)
    WHILE           reduce using rule 21 (cicloVarsMain -> .)
    RBRACE          reduce using rule 21 (cicloVarsMain -> .)
    VAR             reduce using rule 23 (createVariableDirMain -> .)

    cicloVarsMain                  shift and go to state 39
    createVariableDirMain          shift and go to state 38
    varsMain                       shift and go to state 40

state 33

    (1) programa -> PROGRAM ID addProcedureDir SEMICOLON cicloVars cicloFuncion MAIN bloque .

    $end            reduce using rule 1 (programa -> PROGRAM ID addProcedureDir SEMICOLON cicloVars cicloFuncion MAIN bloque .)


state 34

    (7) auxVar1 -> idVars COLON . tipo addTypeGlobal SEMICOLON
    (13) tipo -> . INT ambAuxTipo1
    (14) tipo -> . BOOL ambAuxTipo1
    (15) tipo -> . STRING ambAuxTipo1
    (16) tipo -> . FLOAT ambAuxTipo1
    (17) tipo -> . CHAR ambAuxTipo1

    INT             shift and go to state 16
    BOOL            shift and go to state 19
    STRING          shift and go to state 14
    FLOAT           shift and go to state 17
    CHAR            shift and go to state 18

    tipo                           shift and go to state 41

state 35

    (9) idVars -> ID addVariableDir . ambIdVars
    (11) ambIdVars -> . COMMA idVars
    (12) ambIdVars -> .

    COMMA           shift and go to state 43
    COLON           reduce using rule 12 (ambIdVars -> .)

    ambIdVars                      shift and go to state 42

state 36

    (18) ambAuxTipo1 -> LBRACKET CTEINT . RBRACKET

    RBRACKET        shift and go to state 44


state 37

    (104) funcion -> FUNCTION tipo ID LPAREN . auxFunction RPAREN bloqueFuncion addProcDirectoryFunc
    (106) auxFunction -> . parametros
    (107) auxFunction -> .
    (108) parametros -> . auxParametros
    (109) auxParametros -> . tipo ID addParameters ambAuxParametros
    (13) tipo -> . INT ambAuxTipo1
    (14) tipo -> . BOOL ambAuxTipo1
    (15) tipo -> . STRING ambAuxTipo1
    (16) tipo -> . FLOAT ambAuxTipo1
    (17) tipo -> . CHAR ambAuxTipo1

    RPAREN          reduce using rule 107 (auxFunction -> .)
    INT             shift and go to state 16
    BOOL            shift and go to state 19
    STRING          shift and go to state 14
    FLOAT           shift and go to state 17
    CHAR            shift and go to state 18

    tipo                           shift and go to state 45
    auxFunction                    shift and go to state 46
    auxParametros                  shift and go to state 47
    parametros                     shift and go to state 48

state 38

    (22) varsMain -> createVariableDirMain . VAR auxVar1Main

    VAR             shift and go to state 49


state 39

    (30) bloque -> LBRACE cicloVarsMain . cicloBloque RBRACE
    (31) cicloBloque -> . estatuto cicloBloque
    (32) cicloBloque -> .
    (46) estatuto -> . asignacion
    (47) estatuto -> . condicion
    (48) estatuto -> . escritura
    (49) estatuto -> . lectura
    (50) estatuto -> . llamada
    (51) estatuto -> . ciclo
    (52) asignacion -> . ID auxAsignacion1 EQUALA exp SEMICOLON
    (74) condicion -> . IF LPAREN cicloExpresion RPAREN bloque auxCondicion
    (55) escritura -> . PRINT LPAREN auxEscritura1 RPAREN SEMICOLON
    (122) lectura -> . READ LPAREN ID RPAREN SEMICOLON
    (114) llamada -> . ID LPAREN auxLlamada RPAREN SEMICOLON
    (113) ciclo -> . WHILE LPAREN cicloExpresion RPAREN bloque

    RBRACE          reduce using rule 32 (cicloBloque -> .)
    ID              shift and go to state 60
    IF              shift and go to state 57
    PRINT           shift and go to state 51
    READ            shift and go to state 50
    WHILE           shift and go to state 52

    ciclo                          shift and go to state 53
    asignacion                     shift and go to state 61
    estatuto                       shift and go to state 54
    llamada                        shift and go to state 55
    condicion                      shift and go to state 56
    cicloBloque                    shift and go to state 59
    lectura                        shift and go to state 58
    escritura                      shift and go to state 62

state 40

    (20) cicloVarsMain -> varsMain . cicloVarsMain
    (20) cicloVarsMain -> . varsMain cicloVarsMain
    (21) cicloVarsMain -> .
    (22) varsMain -> . createVariableDirMain VAR auxVar1Main
    (23) createVariableDirMain -> .

    ID              reduce using rule 21 (cicloVarsMain -> .)
    IF              reduce using rule 21 (cicloVarsMain -> .)
    PRINT           reduce using rule 21 (cicloVarsMain -> .)
    READ            reduce using rule 21 (cicloVarsMain -> .)
    WHILE           reduce using rule 21 (cicloVarsMain -> .)
    RBRACE          reduce using rule 21 (cicloVarsMain -> .)
    VAR             reduce using rule 23 (createVariableDirMain -> .)

    cicloVarsMain                  shift and go to state 63
    createVariableDirMain          shift and go to state 38
    varsMain                       shift and go to state 40

state 41

    (7) auxVar1 -> idVars COLON tipo . addTypeGlobal SEMICOLON
    (8) addTypeGlobal -> .

    SEMICOLON       reduce using rule 8 (addTypeGlobal -> .)

    addTypeGlobal                  shift and go to state 64

state 42

    (9) idVars -> ID addVariableDir ambIdVars .

    COLON           reduce using rule 9 (idVars -> ID addVariableDir ambIdVars .)


state 43

    (11) ambIdVars -> COMMA . idVars
    (9) idVars -> . ID addVariableDir ambIdVars

    ID              shift and go to state 24

    idVars                         shift and go to state 65

state 44

    (18) ambAuxTipo1 -> LBRACKET CTEINT RBRACKET .

    ID              reduce using rule 18 (ambAuxTipo1 -> LBRACKET CTEINT RBRACKET .)
    SEMICOLON       reduce using rule 18 (ambAuxTipo1 -> LBRACKET CTEINT RBRACKET .)


state 45

    (109) auxParametros -> tipo . ID addParameters ambAuxParametros

    ID              shift and go to state 66


state 46

    (104) funcion -> FUNCTION tipo ID LPAREN auxFunction . RPAREN bloqueFuncion addProcDirectoryFunc

    RPAREN          shift and go to state 67


state 47

    (108) parametros -> auxParametros .

    RPAREN          reduce using rule 108 (parametros -> auxParametros .)


state 48

    (106) auxFunction -> parametros .

    RPAREN          reduce using rule 106 (auxFunction -> parametros .)


state 49

    (22) varsMain -> createVariableDirMain VAR . auxVar1Main
    (24) auxVar1Main -> . idVarsMain COLON tipo addTypeGlobalMain SEMICOLON
    (26) idVarsMain -> . ID addVariableDirMain ambIdVarsMain

    ID              shift and go to state 70

    auxVar1Main                    shift and go to state 68
    idVarsMain                     shift and go to state 69

state 50

    (122) lectura -> READ . LPAREN ID RPAREN SEMICOLON

    LPAREN          shift and go to state 71


state 51

    (55) escritura -> PRINT . LPAREN auxEscritura1 RPAREN SEMICOLON

    LPAREN          shift and go to state 72


state 52

    (113) ciclo -> WHILE . LPAREN cicloExpresion RPAREN bloque

    LPAREN          shift and go to state 73


state 53

    (51) estatuto -> ciclo .

    ID              reduce using rule 51 (estatuto -> ciclo .)
    IF              reduce using rule 51 (estatuto -> ciclo .)
    PRINT           reduce using rule 51 (estatuto -> ciclo .)
    READ            reduce using rule 51 (estatuto -> ciclo .)
    WHILE           reduce using rule 51 (estatuto -> ciclo .)
    RBRACE          reduce using rule 51 (estatuto -> ciclo .)
    RETURN          reduce using rule 51 (estatuto -> ciclo .)


state 54

    (31) cicloBloque -> estatuto . cicloBloque
    (31) cicloBloque -> . estatuto cicloBloque
    (32) cicloBloque -> .
    (46) estatuto -> . asignacion
    (47) estatuto -> . condicion
    (48) estatuto -> . escritura
    (49) estatuto -> . lectura
    (50) estatuto -> . llamada
    (51) estatuto -> . ciclo
    (52) asignacion -> . ID auxAsignacion1 EQUALA exp SEMICOLON
    (74) condicion -> . IF LPAREN cicloExpresion RPAREN bloque auxCondicion
    (55) escritura -> . PRINT LPAREN auxEscritura1 RPAREN SEMICOLON
    (122) lectura -> . READ LPAREN ID RPAREN SEMICOLON
    (114) llamada -> . ID LPAREN auxLlamada RPAREN SEMICOLON
    (113) ciclo -> . WHILE LPAREN cicloExpresion RPAREN bloque

    RBRACE          reduce using rule 32 (cicloBloque -> .)
    ID              shift and go to state 60
    IF              shift and go to state 57
    PRINT           shift and go to state 51
    READ            shift and go to state 50
    WHILE           shift and go to state 52

    ciclo                          shift and go to state 53
    asignacion                     shift and go to state 61
    estatuto                       shift and go to state 54
    llamada                        shift and go to state 55
    condicion                      shift and go to state 56
    cicloBloque                    shift and go to state 74
    lectura                        shift and go to state 58
    escritura                      shift and go to state 62

state 55

    (50) estatuto -> llamada .

    ID              reduce using rule 50 (estatuto -> llamada .)
    IF              reduce using rule 50 (estatuto -> llamada .)
    PRINT           reduce using rule 50 (estatuto -> llamada .)
    READ            reduce using rule 50 (estatuto -> llamada .)
    WHILE           reduce using rule 50 (estatuto -> llamada .)
    RBRACE          reduce using rule 50 (estatuto -> llamada .)
    RETURN          reduce using rule 50 (estatuto -> llamada .)


state 56

    (47) estatuto -> condicion .

    ID              reduce using rule 47 (estatuto -> condicion .)
    IF              reduce using rule 47 (estatuto -> condicion .)
    PRINT           reduce using rule 47 (estatuto -> condicion .)
    READ            reduce using rule 47 (estatuto -> condicion .)
    WHILE           reduce using rule 47 (estatuto -> condicion .)
    RBRACE          reduce using rule 47 (estatuto -> condicion .)
    RETURN          reduce using rule 47 (estatuto -> condicion .)


state 57

    (74) condicion -> IF . LPAREN cicloExpresion RPAREN bloque auxCondicion

    LPAREN          shift and go to state 75


state 58

    (49) estatuto -> lectura .

    ID              reduce using rule 49 (estatuto -> lectura .)
    IF              reduce using rule 49 (estatuto -> lectura .)
    PRINT           reduce using rule 49 (estatuto -> lectura .)
    READ            reduce using rule 49 (estatuto -> lectura .)
    WHILE           reduce using rule 49 (estatuto -> lectura .)
    RBRACE          reduce using rule 49 (estatuto -> lectura .)
    RETURN          reduce using rule 49 (estatuto -> lectura .)


state 59

    (30) bloque -> LBRACE cicloVarsMain cicloBloque . RBRACE

    RBRACE          shift and go to state 76


state 60

    (52) asignacion -> ID . auxAsignacion1 EQUALA exp SEMICOLON
    (114) llamada -> ID . LPAREN auxLlamada RPAREN SEMICOLON
    (53) auxAsignacion1 -> . LBRACKET exp RBRACKET
    (54) auxAsignacion1 -> .

    LPAREN          shift and go to state 79
    LBRACKET        shift and go to state 77
    EQUALA          reduce using rule 54 (auxAsignacion1 -> .)

    auxAsignacion1                 shift and go to state 78

state 61

    (46) estatuto -> asignacion .

    ID              reduce using rule 46 (estatuto -> asignacion .)
    IF              reduce using rule 46 (estatuto -> asignacion .)
    PRINT           reduce using rule 46 (estatuto -> asignacion .)
    READ            reduce using rule 46 (estatuto -> asignacion .)
    WHILE           reduce using rule 46 (estatuto -> asignacion .)
    RBRACE          reduce using rule 46 (estatuto -> asignacion .)
    RETURN          reduce using rule 46 (estatuto -> asignacion .)


state 62

    (48) estatuto -> escritura .

    ID              reduce using rule 48 (estatuto -> escritura .)
    IF              reduce using rule 48 (estatuto -> escritura .)
    PRINT           reduce using rule 48 (estatuto -> escritura .)
    READ            reduce using rule 48 (estatuto -> escritura .)
    WHILE           reduce using rule 48 (estatuto -> escritura .)
    RBRACE          reduce using rule 48 (estatuto -> escritura .)
    RETURN          reduce using rule 48 (estatuto -> escritura .)


state 63

    (20) cicloVarsMain -> varsMain cicloVarsMain .

    ID              reduce using rule 20 (cicloVarsMain -> varsMain cicloVarsMain .)
    IF              reduce using rule 20 (cicloVarsMain -> varsMain cicloVarsMain .)
    PRINT           reduce using rule 20 (cicloVarsMain -> varsMain cicloVarsMain .)
    READ            reduce using rule 20 (cicloVarsMain -> varsMain cicloVarsMain .)
    WHILE           reduce using rule 20 (cicloVarsMain -> varsMain cicloVarsMain .)
    RBRACE          reduce using rule 20 (cicloVarsMain -> varsMain cicloVarsMain .)


state 64

    (7) auxVar1 -> idVars COLON tipo addTypeGlobal . SEMICOLON

    SEMICOLON       shift and go to state 80


state 65

    (11) ambIdVars -> COMMA idVars .

    COLON           reduce using rule 11 (ambIdVars -> COMMA idVars .)


state 66

    (109) auxParametros -> tipo ID . addParameters ambAuxParametros
    (110) addParameters -> .

    COMMA           reduce using rule 110 (addParameters -> .)
    RPAREN          reduce using rule 110 (addParameters -> .)

    addParameters                  shift and go to state 81

state 67

    (104) funcion -> FUNCTION tipo ID LPAREN auxFunction RPAREN . bloqueFuncion addProcDirectoryFunc
    (33) bloqueFuncion -> . LBRACE cicloVarsFuncion cicloBloqueFuncion RETURN ID SEMICOLON RBRACE

    LBRACE          shift and go to state 82

    bloqueFuncion                  shift and go to state 83

state 68

    (22) varsMain -> createVariableDirMain VAR auxVar1Main .
